--- a/1611.09259/frankly.tex
+++ b/1611.09259/frankly.tex
@@ -1,4 +1,6 @@
-\documentclass{sigplanconf}
+\documentclass[12pt]{article}
+
+  \usepackage[numbers,sort&compress,square]{natbib}
 
 % US Letter page size
 \pdfpagewidth=8.5in
@@ -27,7 +29,51 @@
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{url}
 
-\usepackage{MnSymbol}
+\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 % get rid of hypertext link on \citeauthor
 \usepackage{etoolbox}
@@ -203,7 +249,7 @@
 %% \newcommand{\ret}[2]{\effbox{#1}{#2}}
 %% \newcommand{\template}[3]{{#1} \mathbin{\effbox{#2}} {#3}}
 
-\newcommand{\key}[1]{\mathbf{#1}} % keyword
+\newcommand{\key}[1]{\textbf{#1}} % keyword
 \newcommand{\var}{\mathit}        % local variable or meta variable
 
 \newcommand{\op}{\mathsf}  % operator (command or computation)
@@ -295,10 +341,10 @@
 \newcommand{\matches}[4]{\patbase{\sigyields{#3}}{#1}{#2}{#4}}
 \newcommand{\matchesv}[3]{\patbase{\dashv}{#1}{#2}{#3}}
 
-
+\date{3 Oct 2017}
 \begin{document}
 
-\toappear{}
+%%\toappear{}
 
 %% \conferenceinfo{WXYZ '05}{date, City.} 
 %% \copyrightyear{2005} 
@@ -317,15 +363,7 @@
 %%            {}
 %%            {}
 
-\authorinfo{Sam Lindley}
-           {The University of Edinburgh, UK}
-           {sam.lindley@ed.ac.uk}
-\authorinfo{Conor McBride}
-           {University of Strathclyde, UK}
-           {conor.mcbride@strath.ac.uk}
-\authorinfo{Craig McLaughlin}
-           {The University of Edinburgh, UK}
-           {craig.mclaughlin@ed.ac.uk}
+\author{Sam Lindley \\ Conor McBride \\ Craig McLaughlin}
         %% {Email1}
 %% \authorinfo{Name2\and Name3}
 %%            {Affiliation2/3}
@@ -397,11 +435,11 @@ an exploration of future possibilities, particularly in
 combination with other forms of rich type system.
 \end{abstract}
 
-\category{D.3.2}{Language Classifications}{Applicative (functional) languages}
+%\category{D.3.2}{Language Classifications}{Applicative (functional) languages}
 
-\keywords algebraic effects, effect handlers, effect polymorphism,
-call-by-push-value, pattern matching, continuations, bidirectional
-typing
+%\keywords algebraic effects, effect handlers, effect polymorphism,
+%call-by-push-value, pattern matching, continuations, bidirectional
+%typing
 
 \section{Introduction}
 \label{sec:intro}
@@ -1463,7 +1501,7 @@ how Frank's careful silences deliver the power we claim.
 %%                              &&\mid& \key{letrec}~\many{f : P = e}~\key{in}~d \\
 %%\slab{definitions}     &e       &::=& ((r_{i,j})_j \mapsto n_i)_i \\
 \slab{computations}     &e       &::=& \many{\many{r} \mapsto n}
-%% \slab{definitions}     &e       &::=& \many{r} \mapsto n \medvert e \mid () 
+%% \slab{definitions}     &e       &::=& \many{r} \mapsto n \mid e \mid () 
 \\[1ex]
 \slab{computation patterns}&r &::=& p
                                \mid \effin{\handle{c~\many{p}\,}{z}}
@@ -1828,7 +1866,7 @@ $\boxed{\matchesv{A}{p}{\Gamma}}$
 %%
 %% \inferrule
 %%   {\checksdefg{C}{e} \\ \checksdefg{C}{e'}}
-%%   {\checksdefg{C}{e \medvert e'}}
+%%   {\checksdefg{C}{e \mid e'}}
 %% \end{mathpar}
 
 \medskip
@@ -2007,7 +2045,7 @@ algorithm for checking coverage.
 %% The term $\key{letrec}~\many{f : P = e}~\key{in}~d$ binds the mutually
 %% recursive polymorphic functions $\many{f:P}$ in $d$.
 
-%% The $e \medvert e'$ construct composes the clauses of $e$ with those
+%% The $e \mid e'$ construct composes the clauses of $e$ with those
 %% of $e'$. A multihandler is defined by a collection of clauses that
 %% provides complete coverage of the input types.
 %% %
@@ -2319,7 +2357,7 @@ call-by-value function application.
    &&\mid& \key{handle}^\adj_G~m~
              \ba[t]{@{}r@{}l@{}}
              \key{with}~& \many{\handle{c~\many{x}}{z} \mapsto n} \\
-             \medvert~  &  x \mapsto n' \\
+             \mid~  &  x \mapsto n' \\
              \ea \\
    &&\mid&  \key{let}~f : P = n~\key{in}~n' \\
    &&\mid&  \key{letrec}~\many{f : P = \lambda \many{x}.n}~\key{in}~n' \\
@@ -2410,7 +2448,7 @@ $\boxed{\checks{\Gamma}{\sigs}{A}{n}}$
     {\sigs}{B'}{n})_{c : \many{A \to}~ B ~\in~ \nowt \oplus \adj} \\
    \checks{\Gamma, x:A'}{\sigs}{B'}{n'}}
   {\checksgs{B'}{\key{handle}^\adj_{\effbox{\sigs}B'}~ m ~\key{with}~
-               (\handle{c~\many{x}}{z} \mapsto n)_c \medvert
+               (\handle{c~\many{x}}{z} \mapsto n)_c \mid
                 x \mapsto n'}}
 %% \inferrule
 %%   {\infers{\Gamma}{\sigs \oplus \adj}{m}{A} \\
@@ -2418,7 +2456,7 @@ $\boxed{\checks{\Gamma}{\sigs}{A}{n}}$
 %%          {B}{n_c})_{c : \many{A'} \to B ~\in~ \nowt \oplus \adj} \\
 %%    \checks{\Gamma, x:A}{\sigs}{B}{n'}}
 %%   {\checksgs{B}{\key{handle}^\adj~ m ~\key{with}~
-%%                (\handle{c~\many{x_c}}{g_c} \mapsto n_c)_c \medvert
+%%                (\handle{c~\many{x_c}}{g_c} \mapsto n_c)_c \mid
 %%                 x \mapsto n'}}
 
 %% \inferrule
@@ -2798,11 +2836,11 @@ in Section~\ref{subsec:pipe}.
           \key{handle}^{\id + \inter{Receive}\,X}_{\effbox{\evd, \inter{Abort}}Y}\,y!~\key{with} \\
             \ba{@{}r@{\quad}l@{~}l@{}}
                      &\op{\effin{\handle{\op{receive}}{r}}} &\mapsto \op{pipe}~(s~\op{unit})~(r~x) \\
-            %% \medvert
+            %% \mid
             &y                                     &\mapsto y \\
             \ea \\
           \el \\
-       %\medvert~
+       %\mid~
           &x \mapsto
              \bl
              \key{case}~x~\key{of}~\con{unit} \mapsto \\
@@ -2810,7 +2848,7 @@ in Section~\ref{subsec:pipe}.
                    \key{handle}^{\id + \inter{Receive}\,X}_{\effbox{\evd, \inter{Abort}}Y}\,y!~\key{with} \\
                       \ba{@{}r@{\quad}l@{~}l@{}}
                                &\op{\effin{\handle{\op{receive}}{r}}} &\mapsto \op{abort}! \\
-                      %% \medvert
+                      %% \mid
                       &y                                     &\mapsto y \\
                       \ea \\
                    \el \\
@@ -2977,14 +3015,14 @@ section~\ref{sec:future}.
 %% %% M &::= & \many{e} \\
 %% %%   &\mid& \key{case}~(x:D~\many{U})~\key{of}~(k~\many{x_k} \mapsto M_k)_{k \in D} \\
 %% %%   &\mid& \key{handle}~(\force{x}:\effbox{\sigs}V)~\key{with}~
-%% %%           (\handle{c~\many{x_c}}{g_c} \mapsto M_c)_{c \in \sigs} \medvert
+%% %%           (\handle{c~\many{x_c}}{g_c} \mapsto M_c)_{c \in \sigs} \mid
 %% %%           x        \mapsto M
 %% %% \end{equations}%
 %% \begin{equations}
 %% M &::= & \many{e} \\
 %%   &\mid& \key{case}~x~\key{of}~(k~\many{x_k} \mapsto M_k)_{k \in D} \\
 %%   &\mid& \key{handle}~\force{x}~\key{with}~
-%%           (\handle{c~\many{x_c}}{g_c} \mapsto M_c)_{c \in \sigs} \medvert
+%%           (\handle{c~\many{x_c}}{g_c} \mapsto M_c)_{c \in \sigs} \mid
 %%           x        \mapsto M
 %% \end{equations}%
 %% The leaves consist of a sequence of checkable computation
@@ -3099,7 +3137,7 @@ section~\ref{sec:future}.
              \mid k~(\many{w},\EC,\many{n})
              \mid \key{case}~\EC~\key{of}~(k\,\many{x_k} \mapsto n_k)_k \\
   &\mid& \key{handle}^\adj_G~ \EC ~\key{with}~
-            (\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \medvert
+            (\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \mid
             x \mapsto n' \\
   &\mid& \key{let}~(f : P) = \EC~\key{in}~n \\
 \end{equations}%
@@ -3109,9 +3147,9 @@ section~\ref{sec:future}.
 \key{case}~(k'~\many{w} : D\,\many{R})~\key{of}~(k~\many{x_k} \mapsto n_k)_k
   &\reducesto& n_{k'}[\many{(w : A)} / \many{x_{k'}}],
      \quad \many{A} = \dcon(D\,\many{R}, k') \\
-\key{handle}^\adj_G~v~\key{with}~(\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \medvert x \mapsto n'
+\key{handle}^\adj_G~v~\key{with}~(\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \mid x \mapsto n'
   &\reducesto& n'[v / x] \\
-\key{handle}^\adj_G~\EC[c'~\many{w}]~\key{with}~(\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \medvert x \mapsto n'
+\key{handle}^\adj_G~\EC[c'~\many{w}]~\key{with}~(\handle{c~\many{x_c}}{z_c} \mapsto n_c)_c \mid x \mapsto n'
   &\reducesto& n_{c'}[\many{(w : A)} / \many{x_{c'}}, (\lambda y.\EC[y] : \thunk{B \to G}) / z_{c'}],
   ~~ c' \notin \var{HC}(\EC) \text{ and } c':\many{A \to}~B \in \adj \\
 \key{let}~f : P = w~\key{in}~n
@@ -3176,7 +3214,7 @@ homomorphic extension of the following equations.
 \bl
 \var{HC}([~]) = \emptyset \\
 \var{HC}(\key{handle}^\adj_G~ \EC ~\key{with}~
-            (\handle{c_i~\many{x_{c_i}}}{z_{c_i}} \mapsto n_{c_i})_i \medvert
+            (\handle{c_i~\many{x_{c_i}}}{z_{c_i}} \mapsto n_{c_i})_i \mid
             x \mapsto n') =\quad \\
 \hfill \var{HC}(\EC) \cup \{c_i\}_i \\
 \el
@@ -3897,7 +3935,7 @@ heavyweight operating systems development. It should rather be a joy.
 
 %% This is the text of the appendix, if you need one.
 
-\acks
+\section{Acknowledgements}
 
 We would like to thank the following people: Fred McBride for the idea
 of generalising functions to richer notions of context;
