--- a/1611.09259/frankly.tex
+++ b/1611.09259/frankly.tex
@@ -2715,7 +2715,7 @@ the list obtained by appending list $\ws$ to the end of list $\vs$.
 \PatternTypes(\Delta, c) \concat \PatternTypes(I~\Rs, c) \\
 \\
 \end{align*}
-\caption{Pattern Matching Elaboration}
+\caption{Pattern Matching Elaboration Part 1. These definitions are used Figure~\ref{fig:pattern-matching-elaboration-2}}
 \label{fig:pattern-matching-elaboration}
 \end{figure*}
 \begin{figure*}
@@ -2740,7 +2740,7 @@ the list obtained by appending list $\ws$ to the end of list $\vs$.
 \PE(x \cons \xs, Q \cons \Qs, \us, G) &= \PE(\xs, \Qs, \us \proj x, G) \\
 \PE(\emptylist, \emptylist, (\emptylist \mapsto n) \cons \us, G) &= n \\
 \end{align*}
-\caption{Pattern Matching Elaboration}
+\caption{Pattern Matching Elaboration Part 2}
 \label{fig:pattern-matching-elaboration-2}
 \end{figure*}
 %
