--- a/1611.09259/frankly.tex
+++ b/1611.09259/frankly.tex
@@ -2679,17 +2679,6 @@ the list obtained by appending list $\ws$ to the end of list $\vs$.
 \begin{figure*}
 \small
 \begin{align*}
-\Patterns(D) &= (k~\xs_k)_{k \in D},  \quad \text{each }\xs_k \text{ fresh} \\
-\Patterns(I) &= (\effin{\handle{c~\xs_c}{y_c}})_{c \in I}, \quad \text{each }\xs_c, y_c \text{ fresh} \\
-\Patterns(\id) &= [w], \quad w \text{ fresh} \\
-\Patterns(\Delta + I~\Rs) &= \Patterns(\Delta) \concat \Patterns(I) \\
-\PatternTypes(D\,\Rs, k) &= \As,  \text{where }\dcon(D\,\Rs, k) = \As \\
-\PatternTypes(I\,\Rs, c) &= \bullet \cons \As,    \text{where }\icom(I\,\Rs, c) = \As \to B \\
-\PatternTypes(I\,\Rs, c) &= [],  \text{if }\icom(I\,\Rs, c)\text{ undefined} \\
-\PatternTypes(\id) &= \emptylist \\
-\PatternTypes(\Delta + I~\Rs, c) &= 
-\PatternTypes(\Delta, c) \concat \PatternTypes(I~\Rs, c) \\
-\\
 \hdless(\emptylist) &= \true\\
   \hdless(u \cons \us) &= \hdless(u) \wedge \hdless(us)\\[1ex]
   \hdless(x \cons \rs \mapsto n) &= \true\\
@@ -2724,6 +2713,18 @@ the list obtained by appending list $\ws$ to the end of list $\vs$.
 (y \cons \rs \mapsto n) \proj x &= [\rs \mapsto \key{let}~y = x~\key{in}~n] \\
 (\effin{y} \cons \rs \mapsto n) \proj x &=
   [\rs \mapsto \key{let}~y = \thunk{x}~\key{in}~n] \\
+\\
+\Patterns(D) &= (k~\xs_k)_{k \in D}, \, \text{each }\xs_k \text{ fresh} \\
+\Patterns(I) &= (\effin{\handle{c~\xs_c}{y_c}})_{c \in I}, \, \text{each }\xs_c, y_c \text{ fresh} \\
+\Patterns(\id) &= [w],  w \text{ fresh} \\
+\Patterns(\Delta + I~\Rs) &= \Patterns(\Delta) \concat \Patterns(I) \\
+\PatternTypes(D\,\Rs, k) &= \As, \, \text{where }\dcon(D\,\Rs, k) = \As \\
+\PatternTypes(I\,\Rs, c) &= \bullet \cons \As, \,   \text{where }\icom(I\,\Rs, c) = \As \to B \\
+\PatternTypes(I\,\Rs, c) &= [], \, \text{if }\icom(I\,\Rs, c)\text{ undefined} \\
+\PatternTypes(\id) &= \emptylist \\
+\PatternTypes(\Delta + I~\Rs, c) &= 
+\PatternTypes(\Delta, c) \concat \PatternTypes(I~\Rs, c) \\
+\\
 \end{align*}
 \caption{Pattern Matching Elaboration}
 \label{fig:pattern-matching-elaboration}
