--- a/2409.17489/2409.17489-psu.tex
+++ b/2409.17489/2409.17489-psu.tex
@@ -1,8 +1,54 @@
-\documentclass[11pt,leqno]{book}
+\documentclass[12pt,leqno]{book}
 
 \usepackage{amsmath,amsfonts,amscd,amssymb,theorem}
 
-\pagestyle{myheadings}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+\pagestyle{plain}
 
 %\markboth{{\tiny Preliminary version --
 %please do not distribute, use at your own risk}}{{\tiny Preliminary
@@ -350,13 +396,17 @@ plus -1ex minus -0.2ex}{-2mm plus -0pt minus
 
 \begin{document}
 
+\frontmatter
 \maketitle
 
+\thispagestyle{empty}
 \tableofcontents
 
-\chapter*{Introduction.}
+\mainmatter
 
-\section*{Generalities.}
+\chapter{Introduction.}
+
+\section{Generalities.}
 
 One can say that algebra and geometry are related by something like
 the Heisenberg Uncertainty Principle: a perfect algebraic
@@ -485,7 +535,7 @@ from first principles. However, we do have problems we can use as an
 entry point. One set of problems concerns the procedure of {\em
   localization}.
 
-\section*{Localization (and its discontents).}
+\section{Localization (and its discontents).}
 
 In a nutshell, localization is a universal procedure for creating
 new symmetries. Formally, one observes that many mathematical
@@ -667,7 +717,7 @@ quasiequivalences is a non-linear localization problem. Thus even
 when dealing with homology, one needs the full force of non-additive
 localization.
 
-\section*{Categories of models.}
+\section{Categories of models.}
 
 At this point, we go back to 1960-ies and to the perhaps most
 important work in the history of homotopical algebra --- to
@@ -822,7 +872,7 @@ work. Relative categories of Barwick and Kan are important as a
 proof-of-concept; while not much practical work has been done in
 this setting, the fact that it exists is very illuminating.
 
-\section*{Re-animating the sets.}
+\section{Re-animating the sets.}
 
 In a sense, as long as one stays in the paradigm of \cite{qui.ho},
 one can consider the enhanced localization problem completely
@@ -924,7 +974,7 @@ modifications, Grothendieck's idea leads to an axiomatic formulation
 of abstract homotopy theory that is just as strong as those present
 in the literature, but free from the problems described above.
 
-\section*{A trailer.}
+\section{A trailer.}
 
 Let us describe very briefly what we do (there are also more
 detailed introductions at the beginning of each chapter, and a
@@ -1251,7 +1301,7 @@ same caveats apply, but to a large extent, the technology works, and
 most of our enhanced categorical constructions extend to the
 accessible setting.
 
-\section*{Sociology, or why we do it.}
+\section{Sociology, or why we do it.}
 
 Let me now address the elephant in the room. For almost two decades
 now, since \cite{lu1}, Jacob Lurie and his school have been
@@ -1424,7 +1474,7 @@ exist. This might be cumbersome, from time to time, but that is how
 life is; thinking otherwise would be a mistake. Our formalism is
 designed to make such mistakes impossible.
 
-\section*{Safety features presentation.}
+\section{Safety features presentation.}
 
 Let us now list some other things that in our approach, you simply
 cannot do, by design.
@@ -1599,7 +1649,7 @@ the unenhanced setting, the resulting enhanced category is usually
 very hard to describe explicitly, but at least, it definitely
 exists.
 
-\section*{Leitfaden, or how we do it.}
+\section{Leitfaden, or how we do it.}
 
 Now, having explained both what we do in the text and why we think
 it is worth doing, let us explain how we do it --- how the text is
