--- a/2308.05660/Nature_FullText.tex
+++ b/2308.05660/Nature_FullText.tex
@@ -5,7 +5,6 @@
 
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
@@ -326,7 +325,7 @@ The celebrated linear systems problem is to find $x \in \mathbb{R}^d$ such that
 given some invertible matrix $A \in \mathbb{R}^{d \times d}$ and nonzero $b \in \mathbb{R}^d$. We may assume without loss of generality that the matrix $A$ in Eq.~\eqref{eq:linear-system-def} is symmetric and positive definite (SPD); if $A$ is not SPD, then we may consider the system $A^\intercal A x = A^\intercal b$, whose solution $x=A^{-1} b$ is also the solution of $A x = b$. Note that this will affect the total runtime, but still allows for asymptotic scaling improvements with respect to digital methods, in some cases\footnote{Constructing an SPD system from a generic one in this way results in the squaring of the condition number, which influences performance.}. In what follows, we will therefore assume that $A$ is SPD.
 
 
-\begin{figure}[t]
+\begin{figure}[]
     \centering
     \includegraphics{figures/diagram_linear_systems_v4.pdf}
     \caption{\textbf{Diagram of our thermodynamic algorithm for solving linear systems and inverse estimation.} The system of linear equations, or the matrix $A$, is encoded into the thermodynamic hardware, the system is then allowed to evolve until the stationary distribution has been reached, when the trajectory is then integrated to estimate the sample mean or covariance. This gives estimates of the solution of the linear system or the inverse of $A$ respectively.}
