--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-11-08 07:31:27 -0500 
+%% Created for Pete Su at 2024-11-08 14:17:02 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Godel1931a,
+	author = {Kurt G{\"o}del},
+	booktitle = {From Frege to G{\"o}del: A Source Book in Mathematical Logic, 1879--1931},
+	date-added = {2024-11-08 14:14:12 -0500},
+	date-modified = {2024-11-08 14:17:02 -0500},
+	editor = {van Heijenoort, J.},
+	pages = {592-617},
+	publisher = {Harvard University Press},
+	title = {{On Formally Undecidable Propositions of Principia Mathematica and Related Systems I}},
+	year = {1967}}
+
+@book{vanHeijenoort1967,
+	author = {van Heijenoort, J.},
+	date-added = {2024-11-08 14:12:17 -0500},
+	date-modified = {2024-11-08 14:12:29 -0500},
+	isbn = {9780674324497},
+	lccn = {67010905},
+	publisher = {Harvard University Press},
+	series = {Source Books in the History of the Sciences},
+	title = {From Frege to G{\"o}del: A Source Book in Mathematical Logic, 1879--1931},
+	url = {https://books.google.com/books?id=v4tBTBlU05sC},
+	year = {1967},
+	bdsk-url-1 = {https://books.google.com/books?id=v4tBTBlU05sC}}
+
+@book{Godel2012,
+	author = {G{\"o}del, K.},
+	date-added = {2024-11-08 14:10:06 -0500},
+	date-modified = {2024-11-08 14:10:06 -0500},
+	isbn = {9780486158402},
+	publisher = {Dover Publications},
+	series = {Dover Books on Mathematics},
+	title = {On Formally Undecidable Propositions of Principia Mathematica and Related Systems},
+	url = {https://books.google.com/books?id=R7cHCYzIdWYC},
+	year = {2012},
+	bdsk-url-1 = {https://books.google.com/books?id=R7cHCYzIdWYC}}
+
+@book{Renteln2013,
+	author = {Renteln, Paul},
+	date-added = {2024-11-08 14:07:24 -0500},
+	date-modified = {2024-11-08 14:07:41 -0500},
+	isbn = {9781107659698},
+	publisher = {Cambridge University Press},
+	title = {Manifolds, Tensors, and Forms: An Introduction for Mathematicians and Physicists},
+	url = {https://books.google.com/books?id=uJWGAgAAQBAJ},
+	year = {2013},
+	bdsk-url-1 = {https://books.google.com/books?id=uJWGAgAAQBAJ}}
 
 @book{Chruciel2020,
 	author = {Chru{\'s}ciel, Piotr T.},
