--- a/gr-qc-9502024/9502024.tex
+++ b/gr-qc-9502024/9502024.tex
@@ -2301,7 +2301,7 @@ the mean using the projectors $\Pi_\pm(t)$
 T_{VV}(U,V)
 \vert \psi_-\rangle\nonumber\\ &=& P_e { \langle \psi_-
 \vert \Pi_+ (+\infty) T_{VV}(U,V) \vert \psi_-\rangle \over \langle
-\psi_- \vert \Pi_+ (+\infty) \vert \psi_-\rangle }\\
+\psi_- \vert \Pi_+ (+\infty) \vert \psi_-\rangle }\nonumber\\
 && \quad {} + 
 P_g { \langle \psi_- \vert \Pi_- (+\infty) T_{VV}(U,V) \vert
 \psi_-\rangle \over \langle \psi_- \vert \Pi_- (+\infty) \vert
@@ -3991,39 +3991,43 @@ on $S$ and $WD$ respectively.
 Then to first order in $\e$ (the coupling is weak), the evolution of the
 coupled
 system $S$ and $WD$ is given by
- \begin{eqnarray}
-\rho(t_f)& =&\ket{\Psi (t_f)}\bra{\Psi(t_f)}\nonumber\\
-\mbox{where}\quad \quad \quad\quad&&\nonumber\\
-\ket{\Psi(t_f)}& =& \Bigl [
-U_S(t_f,t_i)U_{WD}(t_f,t_i) - i\e \int_{t_i}^{t_f}\! dt \
- U_S(t_f,t)U_{WD}(t_f,t)  f(t) A_S B_{WD}\times \Bigr. \nonumber\\
-&& \quad \quad \Bigl.
-  U_S(t,t_i)U_{WD}(t,t_i) \Bigr] \ki \ket{WD}
+$$
+\rho(t_f) =\ket{\Psi (t_f)}\bra{\Psi(t_f)}\nonumber\\
+$$
+\begin{multline}
+\ket{\Psi(t_f)} = \bigl [
+U_S(t_f,t_i)U_{WD}(t_f,t_i) - \\ 
+i\e \int_{t_i}^{t_f}\! dt \
+ U_S(t_f,t)U_{WD}(t_f,t)  f(t) A_S B_{WD}\times\\
+  U_S(t,t_i)U_{WD}(t,t_i) \bigr] \ki \ket{WD}
 \label{weakiii}
- \end{eqnarray}
+ \end{multline}
 where $U_S$ and $U_{WD}$ are
 the free evolution operators for $S$ and  $WD$ and  $\ket{WD}$ is the initial
 state of  $WD$. Upon post-selecting at $t=t_f$ that $S$ belongs to the
 subspace ${\cal H}_S^{0}$ and tracing over the  states of the
 system $S$, the reduced density matrix describing the $WD$ is obtained
-\begin{eqnarray}
- \rho_{WD}(t_f) &=& Tr_S
- \Bigl [ \Pi_S^0 \rho(t_f)
-\Bigr]\end{eqnarray}
+\begin{align}
+ \rho_{WD}(t_f) &= Tr_S
+ \bigl [ \Pi_S^0 \rho(t_f)
+\bigr]\end{align}
 To first order in $\e$, it takes a very simple
-form \begin{eqnarray}
- \rho_{WD}(t_f)&\simeq &
+form 
+$$
+ \rho_{WD}(t_f)\simeq
 P_{\Pi_S^{0}}\ket{\Psi_{WD}(t_f)}
-\bra{\Psi_{WD}(t_f)}\nonumber\\
-\mbox{where}\quad \  \ \quad&&\nonumber\\
-\ket{\Psi_{WD}(t_f)}&=&
-\left[ U_{WD}(t_f,t_i) -
+\bra{\Psi_{WD}(t_f)}
+$$
+where
+\begin{multline}
+\ket{\Psi_{WD}(t_f)}=\\
+\bigl[ U_{WD}(t_f,t_i) -
  i\e
 \int_{t_i}^{t_f}\! dt \ U_{WD}(t_f,t)  f(t) \bk{A_{S}(t)}_{\Pi_S^{0}}
 B_{WD}U_{WD}(t,t_i)
- \right] \ket{WD}\nonumber\\
-&&\label{weakiv}
- \end{eqnarray}
+ \bigr] \ket{WD}
+\label{weakiv}
+ \end{multline}
 where $P_{\Pi_S^{0}}$ is the probability to be in subspace ${\cal H}_S^{0}$
 and
   \begin{equation}
@@ -4175,28 +4179,26 @@ the interaction of $PS$ with $S$ need not be weak).
 In the interaction
 representation, the wave function of the combined system $S+WD+PS$ is
 to order $\epsilon$ and to order $\lambda^2$
-\begin{eqnarray}
-\lefteqn{{\cal T} e^{-i \int\! dt \ H_{S-WD}(t) + H_{S-PS}(t)}
-\ket{\psi_i}\ket{WD}\ket{0_{PS}}=}\nonumber\\
-& & \left[
-1 -i \int dt \left( H_{S-WD}(t) + H_{S-PS}(t) \right)\right.
-\nonumber\\
-& & \ -{1 \over 2}
+\begin{multline}
+{\cal T} e^{-i \int\! dt \ H_{S-WD}(t) + H_{S-PS}(t)}
+\ket{\psi_i}\ket{WD}\ket{0_{PS}}=\\
+ \Bigl[
+1 -i \int dt \bigl( H_{S-WD}(t) + H_{S-PS}(t) \bigr)
+-{1 \over 2}
 \int dt \int dt^\prime
-{\cal T}\left[ H_{S-PS}(t)  H_{S-PS}(t^\prime) \right]
--
+{\cal T}\bigl[ H_{S-PS}(t)  H_{S-PS}(t^\prime) \bigr]
+-\\
 \int dt \int dt^\prime
-{\cal T}\left[ H_{S-WD}(t)  H_{S-PS}(t^\prime) \right]
-\nonumber\\
-& & \left.\
+{\cal T}\bigl[ H_{S-WD}(t)  H_{S-PS}(t^\prime) \bigr]
 +{i \over 2}
-\int dt \int dt^\prime\int dt^{\prime\prime}
-{\cal T}\left[ H_{S-PS}(t)  H_{S-PS}(t^\prime)
- H_{S-WD}(t^{\prime\prime})\right]
-\right]
+\int dt \int dt^\prime\int dt^{\prime\prime}\\
+{\cal T}\bigl[ H_{S-PS}(t)  H_{S-PS}(t^\prime)
+ H_{S-WD}(t^{\prime\prime})
+\bigr]
+\Bigr]
 \ket{\psi_i}\ket{WD}\ket{0_{PS}}\quad
 \label{weakxi}
-\end{eqnarray}
+\end{multline}
 where $\ket{0_{PS}}$ is the ground state of $PS$ and ${\cal T}$ is
 the time ordering operator.
 The probability of finding the $PS$ in the excited state at $t=t_f$ is,
@@ -4280,14 +4282,14 @@ Finally, the weak value of $A_S$ if the $PS$ has not made a
 transition can also be computed.
 Once more the two cases discussed in eqs (\ref{weakxv}) and (\ref{weakxvi})
 are particularly simple: if $g(t)$ is non vanishing only after $t=\tilde t$ one
-finds \begin{eqnarray}
-\bk{A_{S}(\tilde t)}_{d} &=&{1 \over 1 - P_{e}  }\Bigl(
+finds \begin{align}
+\bk{A_{S}(\tilde t)}_{d} &={1 \over 1 - P_{e}  }\Bigl(
 \bra{\psi_i}A_S\ket{\psi_i} \nonumber\\
-& &-\la^2 \mbox{ Re}  \bigl[
+& -\la^2 \mbox{ Re}  \bigl[
 \bi \int dt g(t) Q_S^\dagger (t)
  \int dt^\p g(t^\p) Q_S(t^\p)  A_S(\tilde t) \ki\bigr]\Bigr)
 \label{weakxvii}
-\end{eqnarray}
+\end{align}
 On the other hand if $g(t)$ is non vanishing only before $t=\tilde t$ one finds
 \begin{multline}
 \bk{A_{S}(\tilde t)}_{d} = {1 \over 1 - P_{e}  }\Bigl(
@@ -4306,23 +4308,23 @@ if $g(t)$ is non vanishing only after $t=\tilde t$
 \bk{A_{S}(\tilde t)}_{d} = \bi A_S(\tilde t) \ki \label{weakwviiii}
 \end{eqnarray}
 and if $g(t)$ is non vanishing only before $t=\tilde t$
-\begin{eqnarray}
+\begin{multline}
 \lefteqn{ P_{e}\bk{A_{S}(\tilde t)}_{e}
-+ (1 - P_{e} )\bk{A_{S}(\tilde t)}_{d} \ =
++ (1 - P_{e} )\bk{A_{S}(\tilde t)}_{d} \ = 
 \bi e^{i\int \! dt \ H_{S-PS}}
 A_S (\tilde t)
 e^{-i\int \! dt \ H_{S-PS}}
 \ki
 \ =}
-\nonumber\\
-& &\bi A_S(\tilde t) \ki
+\\
+\bi A_S(\tilde t) \ki
   +\la^2
 \bi \int dt g(t) Q_S^\dagger (t) A_S(\tilde t)
-\int dt^\p g(t^\p) Q_S^\dagger (t^\p)\ki \ -\nonumber\\
-& &  -\la^2 \mbox{ Re } \bi A_S(\tilde t) \int dt
+\int dt^\p g(t^\p) Q_S^\dagger (t^\p)\ki \ -\\
+ -\la^2 \mbox{ Re } \bi A_S(\tilde t) \int dt
 \int dt^\p {\cal T} g(t) Q_S^\dagger (t) g(t^\p) Q_S^\dagger (t^\p)\ki
 \label{weakwxx}
-\end{eqnarray}
+\end{multline}
 where the r.h.s is the average value of $A_S$ before
 (eq.~(\ref{weakwviiii})) and after (eq.~(\ref{weakwxx})) the detector
 has interacted with $S$.
