--- a/gr-qc-9502024/9502024.tex
+++ b/gr-qc-9502024/9502024.tex
@@ -4212,18 +4212,16 @@ Upon imposing that the
 $PS$ be in its excited state at $t=t_f$ the
 resulting
 wave function  is, to order $\epsilon$ and $\la^2$,
-\begin{eqnarray}
-&&\quad \left [
--i \int dt \la g(t) Q_S(t)  \right.
-\nonumber\\
-&& \left. -
+\begin{multline}
+\Bigl [
+-i \int dt \la g(t) Q_S(t) -
 \int dt \int dt^\prime
 {\cal T}
-\left[\epsilon f(t) A_S(t) B_{WD}(t) \la g(t^\prime) Q_S(t^\prime)
-\right]
-\right]
+\bigl[\epsilon f(t) A_S(t) B_{WD}(t) \la g(t^\prime) Q_S(t^\prime)
+\bigr]
+\Bigr]\\
 \ket{\psi_i}\ket{WD}a^\dagger\ket{0_{PS}}
-\label{weakxii}\end{eqnarray}
+\label{weakxii}\end{multline}
 Making a density matrix out of the state (\ref{weakxii}),
 tracing over the states of $S$ and $PS$
 yields the reduced density matrix $\rho_{WD} =
@@ -4344,15 +4342,15 @@ discussions.
 We recall the this term arises from the following
 decomposition of the second $g^2$ Born term in
 $\ket{\psi_-(t=+\infty)}=e^{-i \int dt dx H_{int}}\ket{0_M} \ket{-}$:
-\begin{eqnarray}
-& & - g^2 m^2
+\begin{multline}
+- g^2 m^2
 \int_{-\infty}^{+\infty}\!
 d\tau
 \int_{-\infty}^{\tau}\!
 d\tau^\p f(\tau) e^{-im\tau}  \phi(\tau)
   f^*(\tau^\p) e^{+im\tau^\p}  \phi(\tau^\p)\ket{0_M}
-\ket{-}\nonumber \\
-&=& - {g^2 m^2 \over 2}
+\ket{-}\\
+= - {g^2 m^2 \over 2}
 \int_{-\infty}^{+\infty}\!
 d\tau
 \int_{-\infty}^{+\infty}\!
@@ -4360,13 +4358,13 @@ d\tau^\p f(\tau)f^*(\tau^\p)
 e^{-im(\tau-\tau^\p)} \phi(\tau) \phi(\tau^\p)
 \left[ 1 + \epsilon(\tau - \tau^\p)\right]
 \ket{0_M}
-\ket{-}\nonumber \\
-&=& -{g^2 m^2\over 2}
+\ket{-} \\
+= -{g^2 m^2\over 2}
 \phi_m^\dagger \phi_m \ket{0_M}\ket{-}
 -  g^2 m^2
 {\cal D}  \ket{0_M}\ket{-}
 \label{stateA}
-\end{eqnarray}
+\end{multline}
 where
 \begin{equation}
 {\cal D} = {1 \over 2}
