--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-11-15 07:19:07 -0500 
+%% Created for Pete Su at 2024-11-15 17:48:52 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Unruh2014,
+	author = {Unruh, W. G.},
+	date-added = {2024-11-15 17:48:49 -0500},
+	date-modified = {2024-11-15 17:48:49 -0500},
+	doi = {10.1007/s10701-014-9778-0},
+	issn = {1572-9516},
+	journal = {Found. Phys.},
+	number = {5},
+	pages = {532--545},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Has Hawking Radiation Been Measured?},
+	url = {http://dx.doi.org/10.1007/s10701-014-9778-0},
+	volume = {44},
+	year = {2014},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/s10701-014-9778-0}}
 
 @article{Englert1994,
 	author = {Englert, Fran{\c{c}}ois and Massar, Serge and Parentani, Renaud},
