--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -992,7 +992,7 @@ with the usual choice in Minkowski spacetime.
 
 In order to form a complete basis, we must add modes which define particle
 states on $\fh$
-and it's extension through the collapsing matter. Here we cannot
+and its extension through the collapsing matter. Here we cannot
 make a choice based on a flat spacetime limit. One
 approach to this problem is as follows \cite{hawking}.  Choose any set of modes
 $\q$ that are well behaved on $\fh\!$. The choice of quantum state $\vac$
